Eerste twee hoofstukken van het verslag.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@331 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -1,2 +1,6 @@
-%alle bijlagen worden ingedeeld in subsecties
-\subsection{Overzicht van de domeinlaag}
+\label{bijlagen}
+\begin{figure}[h!]
+\includegraphics[width=1.0\textwidth]{DomeinlaagBeknopt.pdf}
+\caption{UML diagram van het domein.}
+\label{fig:DomeinlaagBeknopt}
+\end{figure}
