--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -15,15 +15,15 @@ Hoewel we geen \verb+cancel+-emergency use-case moesten implementeren, anticipee
 \begin{figure}[h!]
 \centering
 \begin{tikzpicture}
-\node[rectangle,draw=black] (RBU) at (0,0) {Recorded but unhandled};
-\node[rectangle,draw=black] (RIP) at (6,0) {Response in progress};
-\node[rectangle,dashed,draw=black] (Cl) at (6,-3.2) {Cancelled};
-\node[rectangle,draw=black] (C) at (12,0) {Completed};
-\draw[->] (RBU) to node[above,midway]{\small\texttt{assignUnits}} (RIP);
-\draw[->] (RIP.east) -| ++(0.5,1) -- ++(-1.0) -| (RIP.north);
-\draw[->] (RIP) to node[above,midway]{\small\texttt{finishUnit}} (C);
-\draw[dashed,->] (BRU) -- ++(0,-3.2) to node[above,midway]{\small\texttt{cancelEmergency}} (Cl);
-\draw[dashed,->] (RIP) to node[above,midway,sloped]{\small\texttt{cancelEmergency}} (Cl);
+% \node[rectangle,draw=black] (RBU) at (0,0) {Recorded but unhandled};
+% \node[rectangle,draw=black] (RIP) at (6,0) {Response in progress};
+% \node[rectangle,dashed,draw=black] (Cl) at (6,-3.2) {Cancelled};
+% \node[rectangle,draw=black] (C) at (12,0) {Completed};
+% \draw[->] (RBU) to node[above,midway]{\small\texttt{assignUnits}} (RIP);
+% \draw[->] (RIP.east) -| ++(0.5,1) -- ++(-1.0) -| (RIP.north);
+% \draw[->] (RIP) to node[above,midway]{\small\texttt{finishUnit}} (C);
+% \draw[dashed,->] (BRU) -- ++(0,-3.2) to node[above,midway]{\small\texttt{cancelEmergency}} (Cl);
+% \draw[dashed,->] (RIP) to node[above,midway,sloped]{\small\texttt{cancelEmergency}} (Cl);
 \end{tikzpicture}
 \caption{Beschrijving van de toestanden en overgangen van Emergency}
 \label{fig:stateDiagramEmergency}
@@ -36,7 +36,7 @@ Anderzijds willen we de voordelen die een \verb+enum+ ons biedt niet verliezen\f
 \end{figure}
 Het grote nadeel van deze methode is dat alle toestanden zichtbaar zijn. Indien we dus later in het project juist een toestand willen implementeren waarover we niet kunnen filteren zal deze implementatie grondig bekeken moeten worden. Verder biedt deze implementatie alle voordelen van het \textit{State}-pattern en een \verb+enum+.
 \subsubsection{Factory Method}
-Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestand of door een extern systeem met behulp van een \verb+String+, leek het ons nuttig om hiervoor een \textit{Factory Method}-pattern te gebruiken. Op die manier kunnen we dan een set van factories bijhouden, waarbij iedere factorie een bepaald derectief bijhoudt. Indien bij het inlezen van het tekstbestand een derectief wordt ingelezen, zal de bijbehorende factorie uit de set gehaald worden, die dan vervolgens een unit of emergency aanmaakt. Hierbij werden we echter geconfronteerd met een belangrijk probleem: de parameters van de verschillende units of emergencies zijn niet uniform. We kunnen dus bijgevolg geen abstracte factory laag bouwen waarbij de parameters gesepcifieerd zijn. Dit losten we echter op door een lijst van objecten als parameter mee te geven. Parameters die wel bekend waren\footnote{Omdat ze in de constructor van bijvoorbeeld \verb+Emergency+ reeds gedefinieerd zijn.} werden uiteraard wel in de methode signatuur opgenomen. Dit probleem werd op verschillende constructie patterns bestudeerd maar werd nergens concreet opgelost\footnote{Een prototype kan dit misschien wel oplossen, maar ons domein zou hierop fout kunnen reageren, vanwege finale velden. Bovendien gaan sommige methodes uit van deze finale velden}. De implementatie is beschreven op figuur \ref{fig:factoryMethodPattern}.
+Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestand of door een extern systeem met behulp van een \verb+String+, leek het ons nuttig om hiervoor een \textit{Factory Method}-pattern te gebruiken. Op die manier kunnen we dan een set van factories bijhouden, waarbij iedere factorie een bepaald derectief bijhoudt. Indien bij het inlezen van het tekstbestand een derectief wordt ingelezen, zal de bijbehorende factorie uit de set gehaald worden, die dan vervolgens een unit of emergency aanmaakt. Hierbij werden we echter geconfronteerd met een belangrijk probleem: de parameters van de verschillende units of emergencies zijn niet uniform. We kunnen dus bijgevolg geen abstracte factory laag bouwen waarbij de parameters gesepcifieerd zijn. Dit losten we echter op door een lijst van objecten als parameter mee te geven. Parameters die wel bekend waren\footnote{Omdat ze in de constructor van bijvoorbeeld \texttt{Emergency} reeds gedefinieerd zijn.} werden uiteraard wel in de methode signatuur opgenomen. Dit probleem werd op verschillende constructie patterns bestudeerd maar werd nergens concreet opgelost\footnote{Een prototype kan dit misschien wel oplossen, maar ons domein zou hierop fout kunnen reageren, vanwege finale velden. Bovendien gaan sommige methodes uit van deze finale velden}. De implementatie is beschreven op figuur \ref{fig:factoryMethodPattern}.
 \begin{figure}[h!]
 \includegraphics[width=1.0\textwidth]{CD_factoryMethodPattern.pdf}
 \caption{UML diagram van de implementatie van het \textit{Factory Method}-pattern in het project.}
