--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -53,6 +53,7 @@ input metauml;
 \newpage
 \appendix
 \section{Bijlagen}
+\input{bijlagen}
 \bibliographystyle{alpha}
 \bibliography{boeken}
 \end{empfile}
