--- a/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
@@ -1,8 +1,8 @@
-Dit verslag beschrijft de tweede iteratie van het dispatch systeem voor het onderwerp \textit{Software-Ontwerpen}.
+Dit verslag beschrijft de tweede iteratie van het dispatch systeem voor het vak \textit{Software-Ontwerp}.
 \paragraph{}
-In de tweede tweede iteratie ligt de nadruk van het project op \textit{Design Patterns}. Dit zijn een set van 23 ontwerp patronen die in 1999 door de \textit{Gang of Four (GoF)} ontwikkelde werden als elegante oplossingen voor algemene problemen. Uiteraard wordt maar een heel beperkte subset van deze patronen in dit project daadwerkelijk ge\"implementeerd (zie sectie \ref{patterns}).
+In de tweede iteratie ligt de nadruk van het project op \textit{Design Patterns}. Dit is een set van 23 ontwerppatronen die in 1994 door de \textit{Gang of Four (GoF)} ontwikkeld werden als elegante oplossing voor algemene problemen. Uiteraard wordt maar een heel beperkte subset van deze patronen in dit project daadwerkelijk ge\"implementeerd (zie sectie \ref{patterns}).
 \paragraph{}
-Daarnaast is het uiteraard de bedoeling dat het project verder uitgebreid wordt. Zo dient het systeem door middel van een beleidsregel zelf voorstellen te doen wat betreft het verdelen van eenheden. Verder wordt ook een extern systeem op het systeem gezet die in staat is machinaal het project aan te sturen. Ook kunnen uitgestuurde eenheden teruggeroepen worden. Tot slot kan een emergency ook geannuleerd worden. Dit laatste aspect diende echter niet te worden ge\"implementeerd.
+Daarnaast is het uiteraard de bedoeling dat het project verder uitgebreid wordt. Zo dient het systeem door middel van een beleidsregel, zelf voor te stellen wat er moet gedaan worden voor het verdelen van de eenheden. Verder wordt ook een extern systeem op het systeem gezet dat in staat is machinaal het project aan te sturen. Ook kunnen uitgestuurde eenheden teruggeroepen worden. Tot slot kan een emergency ook geannuleerd worden. Dit laatste aspect diende echter niet ge\"implementeerd te worden.
 %\paragraph{}
 Een deel van het oorspronkelijk project werd herontwikkeld op basis van de eerder vernoemde \textit{Design Patterns}.
 \paragraph{}
