--- a/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
@@ -1,1 +1,30 @@
+\section{Overzicht van het systeem}
 \label{overzicht}
+\paragraph{Algemeen}
+We deelden het project op in 4 verschillende packages:
+\begin{itemize}
+  \item de controller package (\texttt{projectswop20102011.controllers})
+  \item de domein package (\texttt{projectswop20102011.domain})
+  \item de domein validators package (\texttt{projectswop20102011.domain.validators})
+  \item de exception package (\texttt{projectswop20102011.exceptions})
+  \item de external system package (\texttt{projectswop20102011.externalsystem})
+  \item de factories package (\texttt{projectswop20102011.factories}
+  \item de main package (\texttt{projectswop20102011.main})
+  \item de userinterface package (\texttt{projectswop20102011.userinterface})
+  \item de utils package (\texttt{projectswop20102011.utils})
+  \item de utils parsers package (\texttt{projectswop20102011.utils.parsers})
+\end{itemize}
+Deze opdeling gebeurde om de verschillende lagen van elkaar te onderscheiden. Zo kunnen we bepaalde zichtbaarheidsrechten afdwingen. Waarbij de domeinlaag package enkel afhankelijk is van de exceptions.
+Dit betekent dat het bestaan van klassen in de domeinlaag niet afhangt van het bestaan van klassen in de controller, domein validators, external system, factories, main, userinterface of utils laag.
+We zullen nu de verschillende lagen meer in detail bespreken.
+\paragraph{Domeinlaag}
+ Het klassendiagram van de domeinlaag bevindt zich op figuur \ref{fig:DomeinlaagBeknopt} op pagina \pageref{fig:DomeinlaagBeknopt}. Centraal hierin bevindt zich uiteraard de klasse \texttt{Emergency}. Onder deze klasse komen dan de verschillende types emergencies. Ze vormen elk een subklasse met hun specifieke attributen. Verder beschouwen we een \texttt{World}, deze wereld bevat een versie van het domein op een bepaald moment. Zo staat onder de \texttt{World} een \texttt{EmergencyList}, een set die de emergencies in het domein bijhoudt. Door middel van een \texttt{EmergencyEvaluationCriterium} kan men vervolgens deze lijst queryen. Deze klasse is abstract. Haar kinderen implementeren dan de nuttige criteria. Als resultaat van een query bekomen we een nieuwe \texttt{EmergencyList}, hierdoor zijn we in staat om complexe queries uit te voeren. Een andere belangrijke klasse is de \texttt{Unit} klasse. Deze bevat de specifieke data over een eenheid. Omdat een \texttt{Unit} en gebouwen zoals een \texttt{Hospital} enkele eigenschappen gemeen hebben (zoals een naam en een locatie), bestaat er een superklasse die ze generaliseert. Namelijk de klasse \texttt{MapItemList}. Een klasse \texttt{Building} werd overwogen, maar levert hier nog geen toegevoegde waarde. De klasse \texttt{Unit} wordt verder gespecifieerd in verschillende typen eenheden, namelijk een \texttt{Firetruck}, \texttt{Ambulance} of \texttt{Policecar}. Het is uiteraard de bedoeling dat deze units toegewezen kunnen worden aan een bepaalde \texttt{Emergency}. Deze verantwoordelijkheid wordt vervuld door de klasse \texttt{UnitsNeeded}. Deze klasse houdt bij welke en hoeveel units minimaal vereist zijn voor een specifieke \texttt{Emergency}. En deze garandeert ook de atomaire toewijzing van \texttt{Unit}s aan een \texttt{Emergency}. Het is aan de \texttt{Emergency} om te bepalen welke eenheden er vereist zijn. Ook bestaat er een interface \texttt{TimeSensitive}. Deze duidt aan dat een klasse die deze interface implementeert, afhankelijk is van de tijd. Een ander belangrijk aspect aan de domeinlaag is dat er geen klassen zoals \texttt{Caller} of \texttt{Call} of \texttt{Operator} bestaan. Deze bestaan alleen in het domeinmodel. Maar aangezien er nergens een use case bestaat die hiervan gebruik maakt, zijn ze overbodig.
+\paragraph{Domein validatorslaag}
+In deze laag hebben we een aantal klassen die checks uitvoeren. Het eerste onderdeel dat we zullen bespreken is de \texttt{DispatchUnitsConstraint}. Dit is de basisklasse van het \textit{composite} pattern dat we gebruiken. De klasse \texttt{UnitToEmergencyDistanceComparator} vergelijkt de afstand die twee units moeten afleggen om tot hun emergency te geraken. De \texttt{HospitalToEmergencyDistanceComparator} doet iets gelijkaardigs met twee hospitals. De interface \texttt{MapItemEvaluationCriterium} specifieert een criterium om te controleren of \texttt{MapItem}s valide zijn.
+\paragraph{External system laag}
+\paragraph{Factorieslaag}
+Om het model makkelijk uitbreidbaar te maken, waarbij zelfs bijvoorbeeld geen rekening met de user interface moet worden gehouden, hebben we een \texttt{EmergencyFactory} ge\"implemteerd. Vervolgens konden de controllers een factory aanmaken en met behulp van een array van objecten de \texttt{Emergency} aanmaken. Analoog werden ook factories voor MapItems voorzien. Deze heeft nog twee subklassen, \'e\'en abstracte namelijk de \texttt{UnitFactory}, de andere is dan de \texttt{HopitalFactory}. 
+\paragraph{Controllerlaag}
+Vervolgens bevat de controller package alle controllers die de domeinlaag aansturen. Hierbij beschouwen we een abstracte klasse \texttt{Controller}. Waardoor alle controllers een link naar het \texttt{World} object bevatten. Deze wereld kunnen ze dan vervolgens manipuleren. De controllers zijn behoorlijk gelijklopend met de use cases. Voor de initialisatie van de omgeving werd een aparte controller \texttt{ReadEnvironmentDataController} geschreven. Deze is in staat om \texttt{Unit}s en \texttt{Hospital}s aan de wereld toe te voegen.
+\paragraph{Exceptions, Main, Userinterface en Utils}
+Om de code overzichtelijk te houden, werd geopteerd voor een aparte package \texttt{projectswop20102011.exceptions}. Deze omvat alle exceptions in het volledige project. Aangezien deze dus op alle lagen kunnen voorkomen, blijft dit de afscherming van de domeinlaag garanderen. We hebben ook een package die enkel de \texttt{Main} bevat. Vervolgens bevat de userinterface laag verschillende klassen die de communicatie met de gebruiker mogelijk maken. Deze klassen staan in een gelaagde structuur, om makkelijk nieuwe use cases te implementeren. Ten slotte hebben we nog een utilslaag die hulpmethoden voorziet.
