Teh galsrev si fa.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@335 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -8,6 +8,8 @@
 \usepackage{listings}
 \graphicspath{{./UML/}}
 \usetikzlibrary{shapes,snakes}
+\usepackage{multirow}
+\usepackage{color}
 
 %\ifx\pdftexversion\undefined
 %\usepackage[dvips]{graphicx}
