--- a/ProjectSWOP20102011/src/verslag/iteratie2/projectbeheer.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/projectbeheer.tex
@@ -1,1 +1,45 @@
 \label{projectbeheer}
+\paragraph{}
+Een belangrijk aspect voor het welslagen van een project is de samenwerking binnen het team. Hiervoor werden enkele eenvoudige concepten uitgewerkt die de effici\"entie probeerden te verhogen. Deze maatregelen worden kort opgesomd, daarnaast bevat deze sectie ook nog een tabel met de gepresteerde uren en taken per teamlid.
+\subsection{Afspraken binnen het team}
+\paragraph{}
+Algemeen werd er gewerkt vanuit ``Extreme Programming'', waarbij men code schrijft in het bijzijn van minstens \'e\'en van de andere teamleden. Uiteraard was dit door incompatibele uurroosters niet altijd mogelijk. Toch werd ieder teamlid aangespoord om frequent elkaars code te inspecteren, wat leidde tot het opsporen van enkele belangrijke fouten/inconsistenties.
+\paragraph{}
+Het ontwerp van het klassendiagram werd wel volledig in het bijzijn van het volledige team uitgevoerd. Immers dient elk lid het ontwerp in grote mate te begrijpen, alvorens er specificaties, testen en code geschreven kan worden.
+\paragraph{}
+Een ander belangrijk aspect was het maken van een vaste afspraak met onze projectbegeleider. Deze had vaak de vrijdagochtend plaats. Door het invoeren van een vaste afspraak is de drempel voor het rapporteren van problemen/vragen veel lager en kan men op regelmatige basis advies vragen. Bovendien werd telkens na deze afspraak een ontwerpsessie gepland, waarbij de nieuwe inzichten op het ontwerp werden toegepast. Door het feit dat alle teamleden naast dit project nog andere projecten hadden, werden deze gesprekken met de projectbegeleider meestal ondermaats ---dit betekent zonder een concreet model of verslag--- voorbereid. Dit is dan ook een punt waar in de volgende iteratie aan gewerkt moet worden.
+\subsection{Verdeling van het werk}
+Uiteraard kan men niet anders dan bij een dergelijk project het werk opsplitsen in verschillende delen die dan afzonderlijk gebouwd worden. De tabel hieronder beschrijft hoe het werk werd opgedeeld samen met de gepresteerde uren per teamlid.
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|l|r|}
+\hline
+\textbf{Naam}&\textbf{Soort Taak}&\textbf{Gepresteerde Uren}\\\hline\hline
+\multirow{8}{*}{Willem Van Onsem}&Ontwerp&10h\\
+&Specificaties&8h\\
+&Testen&6h\\
+&Implementaties&18h\\
+&Controllers/User Interface&13h\\
+&Code inspecteren&8h\\
+&Afspraak teambegeleider&2h\\
+&\textit{Totaal}&\textit{72h}\\\hline
+\multirow{8}{*}{Jonas Vanthornhout}&Ontwerp&10h\\
+&Specificaties&19h\\
+&Testen&22h\\
+&Implementaties&18h\\
+&Controllers/User Interface&2h\\
+&Code inspecteren&16h\\
+&Afspraak teambegeleider&2h\\
+&\textit{Totaal}&\textit{89h}\\\hline
+\multirow{8}{*}{Pieter-Jan Vuylsteke}&Ontwerp&10h\\
+&Specificaties&14h\\
+&Testen&4h\\
+&Implementaties&20h\\
+&Controllers/User Interface&15h\\
+&Code inspecteren&5h\\
+&Afspraak teambegeleider&2h\\
+&\textit{Totaal}&\textit{70h}\\\hline
+\end{tabular}
+\caption{Tabel met geschatte gewerkte uren per teamlid}
+\label{tbl:workedHours}
+\end{table}
