--- a/ProjectSWOP20102011/src/verslag/iteratie2/uitbreidingen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/uitbreidingen.tex
@@ -1,1 +1,10 @@
 \label{uitbreidbaarheid}
+Het project is gebouwd vanuit het idee dat we enkele standaard aanpassingen moeten kunnen verwerken, zonder veel code te wijzigen. Een voorbeeld hiervan is de implementatie van de emergencies. Een gevolg van deze uitbreidbaarheid is \textit{Low Coupling}. Immers houdt \textit{Low Coupling} in dat veranderingen op bepaalde plaatsen maar zeer beperkt effect hebben op de code op andere plaatsen. Uitbreidbaarheid streeft dus in sommige gevallen naar hetzelfde als de GRASP Patterns.
+\paragraph{}
+Welke uitbreidingen hebben we dan in gedachten? In de eerste plaats doet het model ons vermoeden dat de types Emergencies wel eens uitgebreid kunnen worden. De lijst van emergencies is immers beperkt. In het geval dat we een nieuw type \texttt{Emergency} willen toevoegen, bijvoorbeeld een vulkaanuitbarsting, hoeven we immers alleen een subklasse \texttt{VolcanicEruption} te implementeren. Meestal volstaat het enkele methodes zoals bijvoorbeeld de methode \texttt{Emergency.calculateUnitsNeeded()} te implementeren. Er wordt dus tot op zeker niveau abstractie gemaakt van het type \texttt{Emergency}. En de belangrijkste associaties worden op een hoog niveau gelegd. Een analoge uitbreiding is deze van de \texttt{MapItem} types. Opnieuw kunnen we hier met een gelijkaardig scenario eenvoudig een extra \texttt{Unit} of \texttt{Building} toe te voegen.
+\paragraph{}
+Ook de userinterface kan verder uitgebreid worden. Hierbij wordt door middel van \textit{Polymorphism} een framework geleverd, waarbij men makkelijk nieuwe commando's kan toevoegen. Daar we ervan uitgaan dat het aantal use cases nog zal toenemen, is het aanbieden van dergelijke klassen dus te rechtvaardigen. Bovendien verkleint het de kans op fouten, in bijvoorbeeld het weergeven van de lijst van commando's.
+\paragraph{}
+Heel wat code in dit project is overbodig en levert geen bijdrage. Meestal echter heeft dit tot doel om in geval van nieuwe specificaties makkelijk de nieuwe feiten te implementeren. Dit wordt verwezenlijkt door het invoeren van een abstract niveau alvorens de uiteindelijk implementatie te schrijven. Een concreet voorbeeld is de \texttt{Emergency\-Evaluation\-Criterium} klasse. Hierbij wordt een abstractieniveau ge\"implementeerd voor het selecteren van emergencies op een bepaald criterium, bijvoorbeeld de status. Deze aanpassing heeft echter ook andere redenen, bijvoorbeeld omwille van het \textit{Information Expert} GRASP pattern. Abstractie impliceert verder ook \textit{Low Coupling}, wat dus het model opnieuw ten goede komt.
+\paragraph{}
+We werken ook met een \texttt{TimeSensitive} interface. In het huidige model zouden we deze functionaliteit enkel op \texttt{Unit} niveau kunnen aanbieden, door deze interface, kunnen we eenvoudig andere klassen ook tijdsgevoelig maken.
