--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -1,6 +1,6 @@
 \label{patterns}
-\section{Invloed van GRASP patterns}
-\subsection{GRASP patterns}
+\subsection{Invloed van GRASP patterns}
+\label{grasppatterns}
 \subsubsection{Bespreking van het systeem}
 \paragraph{Algemeen}
 In onze implementatie proberen we in de meeste gevallen zo generisch mogelijk te werken. Dit heeft als indirect gevolg dat de koppeling in ons domeinmodel zeer laag is. Immers dient bij een generische implementatie abstractie gemaakt te worden van de details in de ongekende subklassen. Bijgevolg zijn enkel koppelingen zoals deze tussen \texttt{Emergency} en \texttt{Unit}, of naar de klassen van hun attributen van belang.
@@ -15,7 +15,8 @@ Een voorbeeld van \textit{Pure Fabrication} is de klasse \texttt{UnitsNeeded}. D
 Voorbeelden van het \textit{Controller} patroon zijn er ook genoeg. Namelijk heel de package \texttt{projectswop201-}\\\texttt{02011.controllers}. Deze dienen als koppeling tussen de user interface en het feitelijke systeem. Aangezien een controller maar heel weinig functionaliteit mag bezitten, zijn deze klassen dan ook bijzonder kort.
 \paragraph{}
 Ook hebben we systematisch een lijst-klasse gemaakt wanneer er een klasse verbonden moet worden met \texttt{World}. Zo hebben we \texttt{EmergencyList}, \texttt{MapItemList} en \texttt{TimeSensitiveList}. Zoals de namen al doen vermoeden, groeperen deze lijsten objecten van een gelijknamige klasse. Zo bevat \texttt{EmergencyList} een lijst van emergencies, \texttt{MapItemList} een lijst van \texttt{MapItem}s enzovoort. Hierdoor heeft de klasse \texttt{World} een minimaal aantal verantwoordelijkheden. Zo is het niet de bedoeling dat \texttt{World} een sortering moet uitvoeren op zijn emergencies. Tevens is dit ook niet de verantwoordelijkheid van een emergency zelf. Een elegante oplossing is een nieuwe klasse tussen \texttt{World} en \texttt{Emergency} toevoegen. Deze klasse heeft dan als verantwoordelijkheid de emergencies op te slaan en eventueel operaties op deze lijst uit te voeren. Het is niet de bedoeling dat \texttt{EmergencyList} operaties op \texttt{Emergency} zelf gaat uitvoeren. \texttt{MapItemList} en \texttt{TimeSensitiveList} hebben we analoog ge\"implementeerd. Dit is dus een voorbeeld van \textit{Pure Fabrication} met als gevolg dat de \textit{Cohesion} stijgt. Ook het \textit{Indirection} patroon is hier gedeeltelijk aan de orde.
-\subsection{Design patterns}
+\subsection{Invloed van Design patterns}
+\label{designpatterns}
 \subsubsection{Composite}
 \paragraph{}
 We stellen onze constraints op onze emergency voor als een boom. Deze implementatie is een toepassing van het \textit{Composite} pattern. Hierbij zien we \texttt{Dispatch\-Units\-Constraint} in de rol van \texttt{Component} en de \texttt{Number\-Dispatch\-Units\-Constraint} is \'e\'en van de eventueel later uitgebreide \texttt{Leaf}s. Tot slot zien we \texttt{And\-Dispatch\-Units\-Constraint} als de \texttt{Composite} klasse. Gegeven de specificaties in de opgave is dergelijke structuur misschien ``overkill''. We zijn echter makkelijk in staat om nieuwe types constraints toe te voegen, net als connectoren (zoals bijvoorbeeld een OR). Het uitgewerkte UML diagram met de relevante methodes staat op figuur \ref{fig:compositePattern}.
