--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -11,16 +11,9 @@
 \usepackage{multirow}
 \usepackage{color}
 
-%\ifx\pdftexversion\undefined
-%\usepackage[dvips]{graphicx}
-%\else
-%\usepackage[pdftex]{graphicx}
-%\DeclareGraphicsRule{*}{mps}{*}{}
-%\fi
-
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
-\author{Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
-\date{22 december 2010}
+\author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
+\date{24 december 2010}
 
 \begin{document}
 \begin{empfile}
@@ -32,7 +25,7 @@
 \section*{Inleiding}
 \input{inleiding}
 \newpage
-\section{Overzicht}
+\section{Overzicht van het Systeem}
 \input{overzicht}
 \newpage
 \section{GRASP en Design Patterns}
