--- a/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
@@ -8,8 +8,8 @@ We deelden het project op in 4 verschillende packages:
   \item de domein validators package (\texttt{projectswop20102011.domain.validators})
   \item de exception package (\texttt{projectswop20102011.exceptions})
   \item de external system package (\texttt{projectswop20102011.externalsystem})
-  \item de external system main package (\texttt{projectswop20102011.externalsystem.main})
   \item de factories package (\texttt{projectswop20102011.factories}
+  \item de main package (\texttt{projectswop20102011.main})
   \item de userinterface package (\texttt{projectswop20102011.userinterface})
   \item de utils package (\texttt{projectswop20102011.utils})
   \item de utils parsers package (\texttt{projectswop20102011.utils.parsers})
@@ -24,8 +24,9 @@ Deze laag bevat vier klassen namelijk \texttt{EmergencyList}, \texttt{MapItemLis
 \paragraph{Domein validatorslaag}
 In deze laag hebben we een aantal klassen die checks uitvoeren. Het eerste onderdeel dat we zullen bespreken is de \texttt{DispatchUnitsConstraint}. Dit is de basisklasse van het \textit{composite} pattern dat we gebruiken. De klasse \texttt{UnitToEmergencyDistanceComparator} vergelijkt de afstand die twee units moeten afleggen om tot hun emergency te geraken. De \texttt{HospitalToEmergencyDistanceComparator} doet iets gelijkaardigs met twee hospitals. De interface \texttt{MapItemEvaluationCriterium} specifieert een criterium om te controleren of \texttt{MapItem}s valide zijn.
 \paragraph{External systemlaag}
+De external systemlaag legt de link tussen ons programma en een specifieke interface. Deze laag bevat \'e\'en klasse namelijk \textt{EmergencyDispatchApi}.
 \paragraph{Factorieslaag}
-Om het model makkelijk uitbreidbaar te maken, waarbij zelfs bijvoorbeeld geen rekening met de user interface moet worden gehouden, hebben we een \texttt{EmergencyFactory} ge\"implemteerd. Vervolgens konden de controllers een factory aanmaken en met behulp van een array van objecten de \texttt{Emergency} aanmaken. Analoog werden ook factories voor MapItems voorzien. Deze heeft nog twee subklassen, \'e\'en abstracte namelijk de \texttt{UnitFactory}, de andere is dan de \texttt{HopitalFactory}. 
+Om het model makkelijk uitbreidbaar te maken, waarbij zelfs bijvoorbeeld geen rekening met de user interface moet worden gehouden, hebben we een \texttt{EmergencyFactory} ge\"implementeerd. Vervolgens konden de controllers een factory aanmaken en met behulp van een array van objecten de \texttt{Emergency} aanmaken. Analoog werden ook factories voor MapItems voorzien. Deze heeft nog twee subklassen, \'e\'en abstracte namelijk de \texttt{UnitFactory}, de andere is dan de \texttt{HopitalFactory}. 
 \paragraph{Controllerlaag}
 Vervolgens bevat de controller package alle controllers die de domeinlaag aansturen. Hierbij beschouwen we een abstracte klasse \texttt{Controller}. Waardoor alle controllers een link naar het \texttt{World} object bevatten. Deze wereld kunnen ze dan vervolgens manipuleren. De controllers zijn behoorlijk gelijklopend met de use cases. Voor de initialisatie van de omgeving werd een aparte controller \texttt{ReadEnvironmentDataController} geschreven. Deze is in staat om \texttt{Unit}s en \texttt{Hospital}s aan de wereld toe te voegen.
 \paragraph{Exceptions, Main, Userinterface en Utils}
