Aangepast verslag en UML-diagrammen (part I)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@454 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -1,6 +1,8 @@
 \label{bijlagen}
+Een algemeen beknopt diagram van de domeinlaag wordt beschreven in figuur \ref{fig:umlCompact}.
 \begin{figure}[h!]
 \includegraphics[width=1.0\textwidth]{DomeinlaagBeknopt.pdf}
 \caption{UML diagram van het domein.}
+\label{fig:umlCompact}
 \label{fig:DomeinlaagBeknopt}
 \end{figure}
