--- a/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
@@ -8,7 +8,7 @@ Een deel van het oorspronkelijk project werd herontwikkeld op basis van de eerde
 \paragraph{}
 Het verslag is als volgt gestructureerd. In sectie \ref{overzicht} geven we een overzicht van het systeem en zijn subsystemen.
 We tonen ook hoe we de verschillende verantwoordelijkheden hebben toegewezen.
-In sectie \ref{patterns} bespreken we de invloed van GRASP en design patterns op ons ontwerp.
+In sectie \ref{patterns} bespreken we de invloed van \textit{GRASP-} en \textit{Design-Patterns} op ons ontwerp.
 Alternatieve ontwerpen die niet gekozen werden, zullen ook vermeld worden.
 De mogelijkheden die voorzien zijn voor uitbreidingen zullen besproken worden in sectie \ref{uitbreidbaarheid}.
 Vervolgens tonen we in sectie \ref{testen} hoe we onze testen hebben aangepakt.
