--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -10,6 +10,7 @@
 \usetikzlibrary{shapes,snakes}
 \usepackage{multirow}
 \usepackage{color}
+\usepackage{float}
 
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
 \author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
@@ -27,19 +28,19 @@
 \newpage
 \section{Overzicht van het Systeem}
 \input{overzicht}
-\newpage
+%\newpage
 \section{GRASP en Design Patterns}
 \input{graspDesignPatterns}
-\newpage
+%\newpage
 \section{Potenti\"ele uitbreidingen}
 \input{uitbreidingen}
-\newpage
+%\newpage
 \section{Teststrategie}
 \input{teststrategie}
-\newpage
+%\newpage
 \section{Projectbeheer}
 \input{projectbeheer}
-\newpage
+%\newpage
 \section{Conclusie}
 \input{conclusies}
 \newpage
