--- a/ProjectSWOP20102011/src/verslag/iteratie2/teststrategie.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/teststrategie.tex
@@ -1,7 +1,7 @@
 \label{testen}
 Net als in de eerste iteratie hadden we voor ogen om \textit{Test-Driven Development} toe te passen.
 Namelijk eerst een test schrijven (die zou moeten falen) voor aan de eigenlijke implementatie te beginnen.
-Zo hebben we relatief gemakkelijk fouten kunnen opsporen en corrigeren.
+Zo hebben we relatief gemakkelijk fouten kunnen opsporen en corrigeren. Het is echter niet altijd mogelijk om een bepaalde klasse te testen, omdat deze bijvoorbeeld afhangt van verschillende andere klassen. Sommige klassen zijn bovendien goed afgeschermd in de domeinlaag, waardoor we niet altijd in staat zijn de vereiste objecten aan te maken.
 Bij het maken van testen voor deze iteratie, was het ook onze bedoeling dit zo uitgebreid mogelijk te doen.
 De code coverage tool \textit{EMMA} vormde hierbij een leidraad. Het gaf ons een overzicht welke stukken code er reeds getest werden.
 Voor bijna iedere klasse uit de domeinlaag maakten we een respectievelijke testklasse.
