--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -1,15 +1,15 @@
 \label{patterns}
 \subsection{Invloed van GRASP patterns}
 \label{grasppatterns}
-\paragraph{Algemeen}
+\subsubsection{Algemeen}
 In onze implementatie proberen we in de meeste gevallen zo generisch mogelijk te werken. Dit heeft als indirect gevolg dat de koppeling in ons domeinmodel zeer laag is. Immers dient bij een generische implementatie abstractie gemaakt te worden van de details in de ongekende subklassen. Bijgevolg zijn enkel koppelingen zoals deze tussen \texttt{Emergency} en \texttt{Unit}, of naar de klassen van hun attributen van belang.
-\paragraph{Polymorphism}
-Het pattern \textit{Polymorphism} dient vervolgens de ontbrekende details in te vullen. E\'en concreet voorbeeld hiervan is de \texttt{Emergency.calculateUnitsNeeded()} methode. Hierbij dient een specifiek type \texttt{Emergency} zelf uit te maken welke en hoeveel units er naar deze \texttt{Emergency} gestuurd moeten worden. Dit beantwoordt bovendien ook aan het \textit{Information Expert} patroon. Een Emergency zelf weet immers het best hoe er gereageerd dient te worden.
+\subsubsection{Polymorphism}
+Het pattern \textit{Polymorphism} dient vervolgens de ontbrekende details in te vullen. E\'en concreet voorbeeld hiervan is de \texttt{Emergency.calculateUnitsNeeded()} methode. Hierbij dient een specifiek type \texttt{Emergency} zelf uit te maken welke en hoeveel units er naar deze \texttt{Emergency} gestuurd moeten worden, en wat de beleidsregels zijn. Dit beantwoordt bovendien ook aan het \textit{Information Expert} patroon. Een Emergency zelf weet immers het best hoe er gereageerd dient te worden.
 \paragraph{}
 Ook hebben we zoveel mogelijk attributen proberen te groeperen in enumeraties. Zo hebben we bijvoorbeeld een \texttt{EmergencyStatus}, \texttt{EmergencySeverity} en \texttt{FireSize}. Dit heeft tot gevolg dat indien er bijvoorbeeld een nieuwe status toegevoegd wordt aan het model, we niets aan de \texttt{Emergency} zelf moeten veranderen. Dit is een voorbeeld van \textit{Protected Variation}. Een ander voorbeeld hiervan is onze interface \texttt{TimeSensitive}. \texttt{TimeSensitive} zegt dat het object die deze interface implementeert, afhankelijk is van de tijd. Voorlopig zijn dat enkel objecten van de klasse \texttt{Unit}. Maar als in de toekomst een \texttt{Hospital} tijdsafhankelijk wordt, dan kan dit ziekenhuis eenvoudig deze interface implementeren. Analoog werkt dit uiteraard ook voor bijvoorbeeld \texttt{Emergency}.
 \paragraph{}
-Een voorbeeld van \textit{Pure Fabrication} is de klasse \texttt{UnitsNeeded}. Deze klasse is verantwoordelijk voor het opslaan van de vereiste aantallen eenheden voor een \texttt{Emergency}. En vervolgens het toewijzen van die eenheden te beheren. De \textit{Cohesion} daalt immers wanneer de units verantwoordelijk zijn voor hun toewijziging aan de \texttt{Emergency}, of indien de \texttt{Emergency} zelf zijn units moet kiezen. Daarom hebben we ervoor gekozen een aparte klasse aan te maken die deze verantwoordelijkheid draagt. \texttt{UnitsNeeded} zorgt er ook voor dat er geen directe koppeling is tussen \texttt{Emergency} en \texttt{Unit}. Dit moet feitelijk ook niet aangezien een emergency bepaalde types units vereist en niet een unit zelf.
-\paragraph{} Een voorbeeld van het \textit{Protected Variation} patroon is de klasse \texttt{Emergency\-Evaluation\-Criterium} en haar kind \texttt{StatusEqualityEmergencyEvaluationCriterium}. Dit zijn klassen die een zoekoperatie kunnen uitvoeren op een emergency. Aangezien er feitelijk op elke mogelijke combinatie van de attributen van emergency een zoekoperatie bestaat hebben we een algemene klasse \texttt{EmergencyEvaluationCriterium} ge\"implementeerd. Deze stelt gewoon een zoekoperatie voor. De zoekoperatie zelf wordt dan gespecifieerd in een kind van deze klasse.
+Een voorbeeld van \textit{Pure Fabrication} is de klasse \texttt{UnitsNeeded}. Deze klasse is verantwoordelijk voor de boekhouding van de toegewezen eenheden. De \textit{Cohesion} daalt immers wanneer de units verantwoordelijk zijn voor hun toewijziging aan de \texttt{Emergency}, of indien de \texttt{Emergency} zelf zijn units moet kiezen. Daarom hebben we ervoor gekozen een aparte klasse aan te maken die deze verantwoordelijkheid draagt. \texttt{UnitsNeeded} zorgt er ook voor dat er geen directe koppeling is tussen \texttt{Emergency} en \texttt{Unit}. Dit moet feitelijk ook niet aangezien een emergency bepaalde types units vereist en niet een unit zelf.
+\paragraph{} Een voorbeeld van het \textit{Protected Variation} patroon is de klasse \texttt{Emergency\-Evaluation\-Criterium} en haar kind \texttt{StatusEqualityEmergencyEvaluationCriterium}. Dit zijn klassen die een zoekoperatie kunnen uitvoeren op een \texttt{EmergencyList}. Aangezien er feitelijk op elke mogelijke combinatie van de attributen van emergency een zoekoperatie bestaat hebben we een algemene klasse \texttt{EmergencyEvaluationCriterium} ge\"implementeerd. Deze stelt gewoon een zoekoperatie voor. De zoekoperatie zelf wordt dan gespecifieerd in een kind van deze klasse.
 \paragraph{}
 Voorbeelden van het \textit{Controller} patroon zijn er ook genoeg. Namelijk heel de package \texttt{projectswop201-}\\\texttt{02011.controllers}. Deze dienen als koppeling tussen de user interface en het feitelijke systeem. Aangezien een controller maar heel weinig functionaliteit mag bezitten, zijn deze klassen dan ook bijzonder kort.
 \paragraph{}
@@ -24,7 +24,7 @@ We stellen onze constraints op onze emergency voor als een boom. Deze implementa
 \caption{UML diagram van de implementatie van het \textit{Composite}-pattern in het project.}
 \label{fig:compositePattern}
 \end{figure}
-Tot slot kan opgemerkt worden dat in het boek er operaties in de Composite-participant gedefinieerd worden. In deze implementatie voegen we eenvoudigweg geen operaties toe. Het kennen van de parent levert voor \verb+AndDispatchUnitsConstraint+ geen meerwaarde op. Verder kan geargumenteerd worden dat de opbouw van de boom hiermee vastligt: bottom-up, er kan dus bijgevolg geen boom met een tak naar zichzelf bestaan. Tot slot zou het ook kunnen betekenen dat een component op veschillende plaatsen in de boom voorkomt, wat de structuur dus meer dynamiek geeft.
+Tot slot kan opgemerkt worden dat in het boek er operaties in de Composite-participant gedefinieerd worden. In deze implementatie voegen we eenvoudigweg geen operaties toe. Het kennen van de parent levert voor \verb+AndDispatchUnitsConstraint+ geen meerwaarde op. Verder kan geargumenteerd worden dat de opbouw van de boom hiermee vastligt: bottom-up. Er kan dus bijgevolg geen boom met een tak naar zichzelf bestaan. Tot slot geeft het ook de mogelijkheid om een object op verschillende plaatsen in de boom in te voegen. Dit geeft de structuur dus meer dynamiek.
 \subsubsection{State}
 Hoewel we geen \verb+cancel+-emergency use case moesten implementeren, anticipeerden we toch op de creatie van nieuwe toestanden waarin een emergency zich kan bevinden. We modelleerden dan ook een toestandsdiagram zoals op figuur \ref{fig:stateDiagramEmergency}.
 \begin{figure}[h!]
@@ -35,9 +35,7 @@ Hoewel we geen \verb+cancel+-emergency use case moesten implementeren, anticipee
 \node[rectangle,dashed,draw=black] (Cl) at (6,-3.2) {Cancelled};
 \node[rectangle,draw=black] (C) at (12,0) {Completed};
 \draw[->] (RBU) to node[above,midway]{\small\texttt{assignUnits}} (RIP);
-\draw[->] (RIP.east) -| ++(0.5,1) -- ++(-1.0) -| (RIP.north);
 \draw[->] (RIP) to node[above,midway]{\small\texttt{finishUnit}} (C);
-\draw[dashed,->] (BRU) -- ++(0,-3.2) to node[above,midway]{\small\texttt{cancelEmergency}} (Cl);
 \draw[dashed,->] (RIP) to node[above,midway,sloped]{\small\texttt{cancelEmergency}} (Cl);
 \end{tikzpicture}
 \caption{Beschrijving van de toestanden en overgangen van Emergency}
@@ -49,7 +47,7 @@ Anderzijds willen we de voordelen die een \verb+enum+ ons biedt niet verliezen\f
 \caption{UML diagram van de implementatie van het \textit{State}-pattern in het project.}
 \label{fig:statePattern}
 \end{figure}
-Het grote nadeel van deze methode is dat alle toestanden zichtbaar zijn. Indien we dus later in het project juist een toestand willen implementeren waarover we niet kunnen filteren zal deze implementatie grondig bekeken moeten worden. Verder biedt deze implementatie alle voordelen van het \textit{State}-pattern en een \verb+enum+.
+Het grote nadeel van deze methode is dat alle toestanden zichtbaar zijn. Indien we dus later in het project juist een toestand willen implementeren waarover we niet kunnen filteren zal deze implementatie grondig herbekeken moeten worden. Verder biedt deze implementatie alle voordelen van het \textit{State}-pattern en een \verb+enum+.
 \subsubsection{Factory Method}
 Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestand, leek het ons nuttig om hiervoor een \textit{Factory Method}-pattern te gebruiken. Op die manier kunnen we dan een set van factories bijhouden, waarbij iedere factory een bepaald directief bijhoudt. Indien bij het inlezen van het tekstbestand een directief wordt ingelezen, zal de bijbehorende factory uit de set gehaald worden, die dan vervolgens een unit of emergency aanmaakt. Hierbij werden we echter geconfronteerd met een belangrijk probleem: de parameters van de verschillende units of emergencies zijn niet uniform. We kunnen dus bijgevolg geen abstracte factorylaag bouwen waarbij de parameters gespecifieerd zijn. Dit losten we echter op door een lijst van objecten als parameter mee te geven. De implementatie is beschreven op figuur \ref{fig:factoryMethodPattern}.
 \begin{figure}[h!]
@@ -58,14 +56,14 @@ Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestan
 \label{fig:factoryMethodPattern}
 \end{figure}
 \subsubsection{Chain of Responsibility}
-Een voorbeeld van het \textit{Chain of Responsibility} pattern vinden we in de policies. Elke policy probeert het probleem op te lossen maar als dit niet lukt, wordt het doorgegeven aan zijn opvolger. Meer concreet hebben we in de klasse \texttt{DispatchPolicy} de methode \texttt{compare}. Deze roept de onderliggende policy op en als deze policy niet tot een gewenst resultaat komt, wordt de opvolger opgeroepen waar het scenario zich herhaalt. Pas als het probleem opgelost is of als er geen opvolgers meer zijn, wordt het resultaat teruggegeven.
+Een voorbeeld van het \textit{Chain of Responsibility} pattern vinden we in de policies. Een policy is in principe een \texttt{Comparator}. Een interne methode \texttt{internalCompare} bevat de implementatie van een specifieke \texttt{Policy}. Indien deze \texttt{Policy} geen verschil kan maken tussen de twee eenheden, wordt het doorgegeven aan zijn opvolger. Deze opvolging wordt gedirigeerd door de \texttt{Compare}-methode. Pas indien er een verschil tussen twee eenheden opgemerkt wordt, of indien er geen opvolgers meer zijn, wordt het resultaat teruggegeven. Het voordeel van deze implementatie is dat ze zeer dynamisch is. Ze laat toe om het gedrag van de policy makkelijk ingrijpend te veranderen. Verder merkten we op dat de verschillende \texttt{Emergency}-implementaties meestal met dezelfde bouwstenen werkten, we besparen dus heel wat code die nodeloos gekopieerd wordt. Tot slot kunnen we ook heel eenvoudig een bouwsteen aanpassen\footnote{Wat indien bijvoorbeeld in de \texttt{ASAPPolicy} ook met een specifieke wachttijd rekening gehouden moet worden.}.
 \subsubsection{Strategy}
 Het \textit{Strategy} pattern vinden we terug in de policies. Elke policy is een concrete implementatie van \texttt{DispatchPolicy}. De context is hier de klasse \texttt{UnitsNeeded}. De concrete strategie\"en zijn \texttt{DefaultDispatchPolicy}, \texttt{ASAPDispatchPolicy} en \texttt{FireSizeDispatchPolicy}.
 \subsection{Uitgewerkte alternatieven}
 Naast dit model werden verschillende andere modellen bestudeerd. Bovendien kwam dit model ook met een zekere evolutie tot stand. Modellen werden ge\"implementeerd met een kritische blik op het ontstaan van problemen. Frequent werd dan ook het model herbekeken en aangepast. In deze sectie geven we een bondig overzicht van de belangrijkste overwogen alternatieven.
 \paragraph{Domeinmodel versus klassendiagram}
 Het domeinmodel in de opgave suggereert heel vaak dat bepaalde klassen dienen ge\"implementeerd te worden. Voorbeelden hierbij zijn de klassen \texttt{Caller} en \texttt{Call}. Deze werden initieel ge\"implementeerd. Er staat echter in geen enkele use case beschreven dat het bijhouden van deze instanties vereist is. Het ligt in de geest van Extreme Programming om geen functionaliteiten te schrijven die geen duidelijk nut hebben. Eenvoud ligt immers aan de basis van een goed model. Bijgevolg werd besloten deze klassen te verwijderen. Bovendien werd de implementatie zo vereenvoudigd. Iets soortgelijks gebeurde met de klassen \texttt{Operator}, \texttt{Dispatcher} en \texttt{UnitCommander}. Deze klassen zijn niet volledig verdwenen uit ons model want er bestaan nog controllers voor.
-\paragraph{Polymorfisme versus typeattribuut}
+\paragraph{Polymorfisme versus typeattribuut??}
 Een belangrijke overweging in het model was het design van een \texttt{Unit} en de bijbehorende types eenheden. Hierbij werden drie overwegingen onderzocht. De eerste mogelijkheid was --- zoals het domeinmodel suggereert --- een polymorfe aanpak. Hierbij worden klassen als \texttt{Ambulance} onder de klasse \texttt{Unit} geplaatst. Deze implementatie leidt echter tot klassen zonder inhoud. Zo erven \texttt{Firetruck} en \texttt{Policecar} alle methodes over. Maar dit model heeft geen toegevoegde waarde. De enige informatie die een \texttt{Policecar} meer bevat dan een \texttt{Unit} is zijn typeinformatie. Een alternatief werd gerealiseerd door middel van een typeattribuut. Een enumeratie \texttt{UnitType} bevat de drie verschillende types eenheden. Een \texttt{Unit} bevat vervolgens een associatie met een \texttt{UnitType}. Dit model werkt echter niet, omdat een \texttt{Ambulance} wel extra informatie bevat. Het dient immers een ziekenhuis te kunnen selecteren. Optionele attributen zijn hierbij uit den boze omdat ze de \textit{Cohesion} verlagen. Bovendien druisen ze in tegen normalisatieprincipes uit bijvoorbeeld databanken. De derde onderzochte vorm was een hybride tussen de twee vorige. Hierbij werken we met polymorfisme, maar bevat \texttt{Unit} ook een typeattribuut. Dit model gaat echter in tegen heel wat principes: er ontstaat redundantie, \textit{Protected Variation} wordt geschonden, de \textit{Cohesion} daalt en er ontstaat meer \textit{Coupling}. We opteerden bijgevolg voor de eerste mogelijkheid.
 \paragraph{EmergencyDescription}
 Een ander probleem is hoe we informatie over deze velden naar buiten kunnen brengen. Hiervoor construeerden we een \verb+EmergencyDescription+ klasse. Deze klasse bevat informatie over de verschillende parameters: hun type, naam en eventueel een beschrijving. Bovendien is deze beschrijving in staat om te controleren of een bepaalde lijst van objecten aan deze beschrijving voldoet.
