--- a/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
@@ -1,6 +1,6 @@
 \label{overzicht}
 \paragraph{Algemeen}
-We deelden het project op in 4 verschillende packages:
+We deelden het project op in 11 verschillende packages:
 \begin{itemize}
   \item de controller package (\texttt{projectswop20102011.controllers})
   \item de domein package (\texttt{projectswop20102011.domain})
@@ -24,7 +24,7 @@ Deze laag bevat vier klassen namelijk \texttt{EmergencyList}, \texttt{MapItemLis
 \paragraph{Domein validatorslaag}
 In deze laag hebben we een aantal klassen die checks uitvoeren. Het eerste onderdeel dat we zullen bespreken is de \texttt{DispatchUnitsConstraint}. Dit is de basisklasse van het \textit{composite} pattern dat we gebruiken. De klasse \texttt{UnitToEmergencyDistanceComparator} vergelijkt de afstand die twee units moeten afleggen om tot hun emergency te geraken. De \texttt{HospitalToEmergencyDistanceComparator} doet iets gelijkaardigs met twee hospitals. De interface \texttt{MapItemEvaluationCriterium} specifieert een criterium om te controleren of \texttt{MapItem}s valide zijn.
 \paragraph{External systemlaag}
-De external systemlaag legt de link tussen ons programma en een specifieke interface. Deze laag bevat \'e\'en klasse namelijk \textt{EmergencyDispatchApi}.
+De external systemlaag legt de link tussen ons programma en een specifieke interface. Deze laag bevat \'e\'en klasse namelijk \texttt{EmergencyDispatchApi}.
 \paragraph{Factorieslaag}
 Om het model makkelijk uitbreidbaar te maken, waarbij zelfs bijvoorbeeld geen rekening met de user interface moet worden gehouden, hebben we een \texttt{EmergencyFactory} ge\"implementeerd. Vervolgens konden de controllers een factory aanmaken en met behulp van een array van objecten de \texttt{Emergency} aanmaken. Analoog werden ook factories voor MapItems voorzien. Deze heeft nog twee subklassen, \'e\'en abstracte namelijk de \texttt{UnitFactory}, de andere is dan de \texttt{HopitalFactory}. 
 \paragraph{Controllerlaag}
