--- a/ProjectSWOP20102011/src/verslag/iteratie2/projectbeheer.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/projectbeheer.tex
@@ -5,11 +5,11 @@ Een belangrijk aspect voor het welslagen van een project is de samenwerking binn
 \paragraph{}
 Algemeen werd er gewerkt vanuit ``Extreme Programming'', waarbij men code schrijft in het bijzijn van minstens \'e\'en van de andere teamleden. Uiteraard was dit door incompatibele uurroosters niet altijd mogelijk. Toch werd ieder teamlid aangespoord om frequent elkaars code te inspecteren, wat leidde tot het opsporen van enkele belangrijke fouten/inconsistenties.
 \paragraph{}
-Het ontwerp van het klassendiagram werd wel volledig in het bijzijn van het volledige team uitgevoerd. Immers dient elk lid het ontwerp in grote mate te begrijpen, alvorens er specificaties, testen en code geschreven kan worden.
+Het ontwerp van het klassendiagram werd wel volledig in het bijzijn van het volledige team uitgevoerd. Immers dient elk lid het ontwerp in grote mate te begrijpen, alvorens er specificaties, testen en code geschreven kunnen worden.
 \paragraph{}
-Een ander belangrijk aspect was het maken van een vaste afspraak met onze projectbegeleider. Deze had vaak de vrijdagochtend plaats. Door het invoeren van een vaste afspraak is de drempel voor het rapporteren van problemen/vragen veel lager en kan men op regelmatige basis advies vragen. Bovendien werd telkens na deze afspraak een ontwerpsessie gepland, waarbij de nieuwe inzichten op het ontwerp werden toegepast. Door het feit dat alle teamleden naast dit project nog andere projecten hadden, werden deze gesprekken met de projectbegeleider meestal ondermaats ---dit betekent zonder een concreet model of verslag--- voorbereid. Dit is dan ook een punt waar in de volgende iteratie aan gewerkt moet worden.
+Een ander belangrijk aspect was het maken van een vaste afspraak met onze projectbegeleider. Deze had vaak op vrijdagochtend plaats. Door het invoeren van een vaste afspraak is de drempel voor het rapporteren van problemen/vragen veel lager en kan men op regelmatige basis advies vragen. Bovendien werd telkens na deze afspraak een ontwerpsessie gepland, waarbij de nieuwe inzichten op het ontwerp werden toegepast.
 \subsection{Verdeling van het werk}
-Uiteraard kan men niet anders dan bij een dergelijk project het werk opsplitsen in verschillende delen die dan afzonderlijk gebouwd worden. De tabel hieronder beschrijft hoe het werk werd opgedeeld samen met de gepresteerde uren per teamlid.
+Uiteraard kan men niet anders dan bij een dergelijk project het werk opsplitsen in verschillende delen die dan afzonderlijk gebouwd worden. Tabel \ref{tbl:workedHours} hieronder beschrijft hoe het werk werd opgedeeld samen met de gepresteerde uren per teamlid.
 \begin{table}[H]
 \centering
 \begin{tabular}{|l|l|r|}
